# fajita

./: .gitignore  Cargo.toml  README.md
guide/: book.toml
guide/src/: 0-basics.md  1-polygons.md  2-shapes.md  3-d.md  SUMMARY.md
src/: grobner.rs  lib.rs  main.rs
src/plane/: line.rs  mod.rs  polygon.rs  pool.rs  shape.rs  shapes.rs
src/space/: mod.rs  plane.rs  polygon.rs  polyhedron.rs  solids.rs  volumes.rs
src/util/: container.rs  intersect.rs  knife.rs  mod.rs  segment.rs  vertex.rs  winding.rs
