[package]
name = "fajita"
version = "0.0.1"
authors = ["Frank Murphy <fpmurphy@mtu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

cgmath = "0.17.0"
either = "1.6.1"
rstar = "0.8.2"
regex = "1.4.2"
im = "15.0"
# rug = "1.11.0"
